Fix Bug 280568 - Kontact/KMail crashes when closing the Sieve dialog

When we call kill() we send a signal result() and result remove job in mJobs
=> list of mJobs is not good after that.
So when we close dialog we disconnect signal before to call kill and mJobs is clear at the end of function

FIXED-IN: 4.7.2
BUG: 280568